[Fix] Don't wrap text in input labels [Misc] Ignore npm-debug.log

--- a/src/boilerplate/elements/form/form.scss
+++ b/src/boilerplate/elements/form/form.scss
@@ -28,6 +28,7 @@ $el : ".#{$prefix}form";
 			border-bottom-left-radius: 3px;
 			border-top-left-radius: 3px;
 			color: $c-gray;
+			white-space: nowrap;
 
 			+ input {
 				width: 100%;
